# cargo2port

./: Cargo.toml  LICENSE
.github/workflows/: build.yml
src/: lib.rs  main.rs
tests/: duplicate_file_test.rs  multi_file_test.rs  one_file_test.rs
tests/support/: multi_file_justify  multi_file_maxlen  multi_file_multiline  multi_file_normal  multi_lockfile_one  multi_lockfile_two  one_file_justify  one_file_maxlen  one_file_multiline  one_file_normal  one_file_v4
